# ergora-remote

./: .env.example  .gitignore  BUILD_REPORT.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml  tauri-release.yml
hud/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
hud/src/: App.tsx  styles.css
hud/src/components/: KeyboardInput.tsx  MicButton.tsx  ResultPanel.tsx  ScratchPad.tsx
hud/src/hooks/: useHudWindow.ts  useRecorder.ts  useStreamingTranscription.ts
hud/src/lib/: api.ts  config.ts  history.ts  pair.ts
scripts/: setup.sh
src/: agent.ts  bridge.ts  config.ts  index.ts  sync.ts  tools.ts  watcher.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs  transcription.rs
