[package]
name = "ergora-hud"
version = "0.1.0"
description = "Ergora HUD — top-of-screen overlay for the Ergora Remote desktop client"
authors = ["Ergora"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ergora_hud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
log = "0.4"
tauri-plugin-log = "2"

# macOS-specific window-level adjustments (above-fullscreen overlay).
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
