[package]
name = "ergora-hud"
version = "0.1.0"
description = "Ergora HUD — top-of-screen overlay for the Ergora Remote desktop client"
authors = ["Ergora"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ergora_hud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
# Custom URL scheme handler — receives ergora-remote://pair?... callbacks
# from the browser after the user signs in on ergora.cloud/remote/pair.
tauri-plugin-deep-link = "2"
log = "0.4"
tauri-plugin-log = "2"

# Streaming-transcription Rust runtime: reqwest's stream feature lets us POST
# audio chunks as they arrive while concurrently parsing the SSE response on
# the same connection.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }

# macOS-specific window-level adjustments (above-fullscreen overlay).
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"

# Windows: floating-on-top + tool-window styling so the overlay doesn't show
# in Alt-Tab and stays above other windows.
[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

# Linux: GTK window-type-hint to mark this as a dock-type window
# (above-fullscreen on most X11 WMs). Tauri already links GTK transitively, so
# we just bring the API surface into scope. Wayland behaviour is wm-dependent
# and noted in the README.
[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
gdk = "0.18"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
